# https

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  macos_clang.yml  ubuntu22_clang.yml  ubuntu22_gcc.yml  ubuntu24_clang.yml  ubuntu24_gcc.yml  windows_msvc.yml
cmake/: Boost.cmake  fmtlib.cmake
examples/: CMakeLists.txt  client_http.cpp  client_ws_awaitable.cpp  client_ws_coro.cpp  server.cpp
examples/unit_tests/: async.cpp  message.cpp  sha1.cpp
src/: http.cpp  http.h  http_async.h  http_base64.cpp  http_base64.h  http_error.cpp  http_error.h  http_field.cpp  http_field.h  http_message.cpp  http_message.h  http_mime.cpp  http_mime.h  http_status.cpp  http_status.h
test/: CMakeLists.txt  base64.cpp  cert.pem  client.cpp  client_http.cpp  client_ws.cpp  example.cpp  example_ssl.cpp  key.pem  server.cpp
test/web/: index.html  main.js
